--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "css-challenge-presentation",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "gc": "node generate-challenge.js",
+    "generate-challenge": "node generate-challenge.js"
   },
   "private": true,
   "dependencies": {
