--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
+  },
+  "resolutions": {
+    "@types/node" : "20.11.7"
   }
 }
